[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/ShootyPlane.tscn" type="PackedScene" id=1]
[ext_resource path="res://Sounds/target lost.wav" type="AudioStream" id=2]
[ext_resource path="res://Sounds/missile lock.wav" type="AudioStream" id=3]
[ext_resource path="res://Sounds/new target aquired.wav" type="AudioStream" id=4]
[ext_resource path="res://Sprites/pointers.png" type="Texture" id=5]
[ext_resource path="res://Scripts/PlayerPlane.gd" type="Script" id=8]

[node name="PlayerPlane" groups=["Players"] instance=ExtResource( 1 )]
script = ExtResource( 8 )

[node name="MissileLockSound" type="AudioStreamPlayer2D" parent="." index="13"]
stream = ExtResource( 3 )
volume_db = -4.0
max_distance = 5000.0
bus = "Tones"

[node name="TargetSound" type="AudioStreamPlayer2D" parent="." index="14"]
stream = ExtResource( 4 )
max_distance = 5000.0
bus = "Tones"

[node name="TargetLostSound" type="AudioStreamPlayer2D" parent="." index="15"]
stream = ExtResource( 2 )
max_distance = 5000.0
bus = "Tones"

[node name="LockPointer" type="Node2D" parent="." index="17"]
visible = false

[node name="Sprite" type="Sprite" parent="LockPointer" index="0"]
position = Vector2( 42, 0 )
texture = ExtResource( 5 )
hframes = 2
vframes = 3
frame = 2
